public/less/app.less
/*@import "../components/bootstrap/less/bootstrap";*/
@import "../components/bootstrap/less/mixins/responsive-visibility";
@import "bootstrap-vars";
@import "bootstrap/responsive-utilities-xxs";

/* Space out content a bit */
body {
  padding-top: 20px;
  padding-bottom: 20px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-right: 15px;
  padding-left: 15px;
}

/* Custom page header */
.header {
  padding-bottom: 20px;
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
}

/* Custom page footer */
/*
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}*/

/* Customize container */
/*
@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }
}
*/
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
  margin-top: 30px;
}
.jumbotron .btn {
  padding: 14px 24px;
  font-size: 21px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-right: 0;
    padding-left: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

.highlight {
  background-color: #f8f8f8;
  font-weight: bold;
}


/* wikitruth custom css */

.header h3 a {
  text-decoration: none;
}
.footer .nav li a {
  padding-top: 0;
  padding-bottom: 0;
}

.page-header a:hover, .lead a:hover {
  text-decoration: none;
}

.list-group.top-list-items, .entry-tabs {
  margin-bottom: 10px;
}

.top-list-items-more {
  text-align: right;
  margin-bottom: 20px
}

.photo-placeholder {
  width: 64px; height: 64px; background-color: #aaa; border-radius: 2px
}

.entry-header {
  margin-bottom: 10px;

  .lead {
    margin-bottom: 0;
  }

  .entry-status {
    color: #f0ad4e; font-size: 14px;
  }
}


.breadcrumb {
  a {
    color: #555;
  }
}

a.no-underline:hover {
  text-decoration: none;
}

.nav.nav-tabs.wt-tabs {
  margin-bottom: 20px;

  a {
    color: #555;
  }

  >li>a {
    border-top-width: 2px;
  }

  >li>a.dropdown-toggle {
    margin-right: 0;
  }

  >li.active>a {
    border-color: #d26911 #e5e5e5 transparent;
    border-top-width: 2px;
  }
}

.nav.nav-tabs.wt-tabs-l2 {
  margin-bottom: 20px;

  > li > a {
    color: #767676;
  }
}

/* prevent comments from overlapping */
.list-group .list-group-item {
  overflow: hidden;
}

.list-group .list-group-item.highlight {
  background-color: #f8f8f8;
}

.wt-section-col {
  margin-bottom: 40px;
}

a.wt-link-focus {

  :hover {
    background-color: #eee;
  }

  span {
    /*line-height: 2;*/
    padding: 5px;
    border-radius: 2px;
  }
}

.media.wt-category {
  margin-bottom: 5px;
  min-height: 100px;

  .media-body > div {
    span, a {
      color: #767676;
    }
  }
}

.nav.navbar-nav > li a, .text-body /*, .nav.nav-tabs > li > a, .dropdown-menu > li a, .dropdown a, .list-group.top-list-items*/ {
  font-size: 16px;
}

/* prevent navbar from collapsing */
/* @import "non-responsive"; */

